--- a/apps.json
+++ b/apps.json
@@ -6,7 +6,7 @@
     "version": "1.0.1",
     "description": "App interno para gestão de clientes e vendas.",
     "icon": "https://raw.githubusercontent.com/seuusuario/meus-apps-internos/main/icons/crm.png",
-    "apk": "https://github.com/Henrique-All/my-apks-versions/releases/tag/v1.0.1"
+    "apk": "https://github.com/Henrique-All/my-apks-versions/releases/download/v1.0.1/application-04497f4c-50ce-4a4e-86f2-9bb5671bab4d.apk"
   },
 
 ]
