--- a/apps.json
+++ b/apps.json
@@ -4,7 +4,7 @@
     "name": "Gestão Vendedor",
     "version": "1.0.1",
     "description": "App interno para gestão de clientes e vendas.",
-    "icon": "https://i.imgur.com/YcFCp1I.png",
+    "icon": "https://i.imgur.com/FnMAooN.png",
     "apk": "https://github.com/Henrique-All/my-apks-versions/releases/download/v1.0.1/application-04497f4c-50ce-4a4e-86f2-9bb5671bab4d.apk"
   }
 ]
