--- a/apps.json
+++ b/apps.json
@@ -3,7 +3,7 @@
     "id": "gv",
     "name": "Gestão Vendedor",
     "version": "1.0.1",
-    "description": "App interno para gestão de clientes e vendas.",
+    "description": "Aplicativo de gestão de vendas para vendedores externos.",
     "icon": "https://raw.githubusercontent.com/Henrique-All/my-apks-versions/master/icons/logo.png",
     "apk": "https://github.com/Henrique-All/my-apks-versions/releases/download/v1.0.1/application-04497f4c-50ce-4a4e-86f2-9bb5671bab4d.apk",
     "size": "135 MB",
