--- a/apps.json
+++ b/apps.json
@@ -4,7 +4,7 @@
     "name": "Gestão Vendedor",
     "version": "1.0.1",
     "description": "Aplicativo de gestão de vendas para vendedores externos.",
-    "icon": "https://raw.githubusercontent.com/Henrique-All/my-apks-versions/master/icons/logo.png",
+    "icon": "https://i.imgur.com/FnMAooN.png",
     "apk": "https://github.com/Henrique-All/my-apks-versions/releases/download/v1.0.1/application-04497f4c-50ce-4a4e-86f2-9bb5671bab4d.apk",
     "size": "135 MB",
     "packageName": "com.gsa.gvapp"
