--- a/apps.json
+++ b/apps.json
@@ -7,6 +7,7 @@
     "icon": "https://i.imgur.com/FnMAooN.png",
     "apk": "https://github.com/Henrique-All/my-apks-versions/releases/download/v1.0.1/application-04497f4c-50ce-4a4e-86f2-9bb5671bab4d.apk",
     "size": "135 MB",
+    "thumb": "https://n4news.com.br/wp-content/uploads/2024/05/mercado-696x464.jpg",
     "packageName": "com.gsa.gvapp"
   }
 ]
