--- a/apps.json
+++ b/apps.json
@@ -3,10 +3,13 @@
     "id": "gv",
     "name": "Gestão Vendedor",
     "version": "1.0.1",
-    "description": "Aplicativo de gestão de vendas para vendedores externos.",
+    "description": "Aplicativo de gestão e controle de metas, vendas e controle de vendas para vendedores do Grupo GSA Alimentos.",
     "icon": "https://i.imgur.com/FnMAooN.png",
     "apk": "https://github.com/Henrique-All/my-apks-versions/releases/download/v1.0.1/application-04497f4c-50ce-4a4e-86f2-9bb5671bab4d.apk",
     "size": "135 MB",
-    "packageName": "com.gsa.gvapp"
+    "packageName": "com.gsa.gvapp",
+    "developer": "GSA Alimentos",
+    "developerWebsite": "https://www.grupogsa.com.br/",
+    "privacyPolicy": "https://www.grupogsa.com.br/responsabilidade"
   }
 ]
