--- a/apps.json
+++ b/apps.json
@@ -2,7 +2,7 @@
   {
     "id": "gv",
     "name": "Gestão Vendedor",
-    "version": "1.0.1",
+    "version": "1.0.2",
     "description": "Aplicativo de gestão e controle de metas, vendas e controle de vendas para vendedores do Grupo GSA Alimentos.",
     "icon": "https://i.imgur.com/FnMAooN.png",
     "apk": "https://github.com/Henrique-All/my-apks-versions/releases/download/v1.0.1/application-04497f4c-50ce-4a4e-86f2-9bb5671bab4d.apk",
@@ -21,6 +21,7 @@
       "https://i.imgur.com/3fzSDd4.png",
       "https://i.imgur.com/UneymV2.png",
       "https://i.imgur.com/SN4hrrv.png"
-    ]
+    ],
+    "tags": ["vendas", "metas", "controle", "gestão", "vendedor", "gsa"]
   }
 ]
