--- a/apps.json
+++ b/apps.json
@@ -5,7 +5,7 @@
     "version": "1.0.2",
     "description": "Aplicativo de gestão e controle de metas, vendas e controle de vendas para vendedores do Grupo GSA Alimentos.",
     "icon": "https://i.imgur.com/FnMAooN.png",
-    "apk": "https://github.com/Henrique-All/GVApp/releases/download/v1.0.0/Gmetas-1.0.apk",
+    "apk": "https://www.mediafire.com/file/ik26abfcr7ii7fe/Documento_de_carlos.pdf/file",
     "size": "135 MB",
     "developer": "GSA Alimentos",
     "developerWebsite": "https://www.grupogsa.com.br/",
