--- a/apps.json
+++ b/apps.json
@@ -5,7 +5,7 @@
     "version": "1.0.2",
     "description": "Aplicativo de gestão e controle de metas, vendas e controle de vendas para vendedores do Grupo GSA Alimentos.",
     "icon": "https://i.imgur.com/FnMAooN.png",
-    "apk": "https://download1980.mediafire.com/boqq4tmhkukguEvs-LN8wJEi4pvYXrxTwvsuuAe1osjvQ5YztEtMm2Aq9NXSxKaygqRT33k2SxUm_fkc7-VpqjQvkLkSGlrS_8k92u0eJz-TLqlf-1Rm8F9kKFTlZsOR18rvtvLopfjfjxW4n_rvm4bMLhBv8yNawz-pOmeqtIiK7w/ik26abfcr7ii7fe/Documento+de+carlos.pdf",
+    "apk": "https://github.com/Henrique-All/GVApp/releases/download/v1.0.0/Gmetas-1.0.apk",
     "size": "135 MB",
     "developer": "GSA Alimentos",
     "developerWebsite": "https://www.grupogsa.com.br/",
