--- a/apps.json
+++ b/apps.json
@@ -11,7 +11,7 @@
     "developerWebsite": "https://www.grupogsa.com.br/",
     "privacyPolicy": "https://www.grupogsa.com.br/responsabilidade",
     "thumb": "https://n4news.com.br/wp-content/uploads/2024/05/mercado-696x464.jpg",
-    "packageName": "com.gsa.gvapp",
+    "packageName": "com.gvapp",
     "type": "sell",
     "screenshots": [
       "https://i.imgur.com/vueFlqS.png",
