--- a/apps.json
+++ b/apps.json
@@ -5,7 +5,7 @@
     "version": "1.2",
     "description": "Aplicativo de gestão é visualização de metas.",
     "icon": "https://i.imgur.com/FnMAooN.png",
-    "apk": "https://github.com/Henrique-All/my-apks-versions/releases/download/v1.0.1/Gmetas-1.0.apk",
+    "apk": "https://github.com/Henrique-All/my-apks-versions/releases/download/1.2/gmetas-externo.apk",
     "size": "71 MB",
     "developer": "GSA Alimentos",
     "developerWebsite": "https://www.grupogsa.com.br/",
